# BrainTrain

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _add_portal_gun_interaction_callback_8cpp.html  _animation_creater_8h.html  _animation_creater_8h_source.html  _base_interaction_callback_8cpp.html  _base_interaction_callback_8cpp_source.html  _bench_8cpp_source.html  _bench_8h_source.html  _cel_shading_8h_source.html  _control_room_8cpp.html  _control_room_8cpp_source.html  _control_room_8h.html  _drunken_interaction_callback_8cpp.html  _f_p_s_camera_manipulator_8cpp_source.html  _f_p_s_camera_manipulator_8h_source.html  _geometry_placer_visitor_8h.html  _geometry_placer_visitor_8h_source.html  _key_handler_8cpp_source.html  _key_handler_8h_source.html  _main_8cpp_source.html  _modify_material_visitor_8cpp.html  _program_switcher_callback_8cpp_source.html  _toon_tex_switcher_callback_8cpp.html  _toon_tex_switcher_callback_8cpp_source.html  _toon_tex_switcher_callback_8h_source.html  _train_switcher_callback_8cpp_source.html  _train_switcher_callback_8h.html  _train_switcher_callback_8h_source.html  _util_functions_8cpp.js  _util_functions_8cpp_source.html  _util_functions_8h.js  _util_functions_8h_source.html  _weapon_h_u_d_8cpp.html  _weapon_h_u_d_8cpp_source.html  _weapon_h_u_d_8h_source.html  class_animation_creator-members.html  class_animation_creator.html  (+61 more)
Animation/: AnimationCreater.cpp
BlenderFiles/: BodyEva.blend  Brecheisen.blend  Rolltreppe.blend  Train.blend  textures_sources.txt
BlenderFiles/exports/: BodyEva.ive  BrainTrain6_1p25E_Lights_Hitbox.ive  BrainTrain6_1p25E_Lights_Hitbox.osgt  BrainTrain_AnimationPath.osgt  BrainTrain_BottleParticles.ive  BrainTrain_BottleParticles.osgt  BrainTrain_BottleParticlesDrinkable.osgt  BrainTrain_Flag.ive  Brecheisen.ive  Portalgun.ive  Portalgun_Big.ive  Train.ive
Callbacks/: AddPortalGunInteractionCallback.cpp  BaseInteractionCallback.cpp  DrunkenInteractionCallback.cpp  ProgramSwitcherCallback.cpp  ToonTexSwitcherCallback.cpp  TrainSwitcherCallback.cpp
Camera/: FPSCameraManipulator.cpp  WeaponHUD.cpp
GUI/: KeyHandler.cpp
Main/: Main.cpp
Objects/: Bench.cpp  ControlRoom.cpp
Shader/: CelShading.cpp  celShader.frag  celShader.vert  fogShader.frag  fogShader.vert  sepiaFogShader.frag  sinShader.frag
Util/: AddInteractionCallbackToDrawableVisitor.cpp  GeometryPlacerVisitor.cpp  ModifyMaterialVisitor.cpp  UtilFunctions.cpp
doc/: Kurzanleitung.odt
doc/html/: _bench_8h.html  (+79 more)
fonts/: From_OSG_DATA_Source.txt
header/: AddInteractionCallbackToDrawableVisitor.h  AddPortalGunInteractionCallback.h  AnimationCreater.h  BaseInteractionCallback.h  Bench.h  CelShading.h  ControlRoom.h  DrunkenInteractionCallback.h  FPSCameraManipulator.h  GeometryPlacerVisitor.h  KeyHandler.h  ModifyMaterialVisitor.h  ProgramSwitcherCallback.h  ToonTexSwitcherCallback.h  TrainSwitcherCallback.h  UtilFunctions.h  WeaponHUD.h
search/: all_0.js  all_10.js  all_11.js  all_12.js  classes_1.js  classes_3.js  classes_4.js  classes_a.js  classes_b.js  defines_0.js  files_2.js  files_3.js  files_7.js  files_8.js  files_b.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  functions_f.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js
(+166 files in other folders)
